--- a/en/speare.html
+++ b/en/speare.html
@@ -184,7 +184,7 @@ b. Click menu: "Command" → "Syntax Checking &amp; Run".<br>
 
 
 <h2>Add a New Colour Scheme</h2>
-&nbsp;&nbsp;&nbsp;&nbsp;scheme boilerplate:<br>
+&nbsp;&nbsp;&nbsp;&nbsp; colour scheme boilerplate:<br>
 <div class="block">
 # 1. file must be UTF-8 encoding<br>
 # 2. line starts with character '#' is comment<br>
@@ -229,12 +229,12 @@ b. Ruby, Lua, Python, Perl, PHP, Tcl, Swift, JavaScript, Shell scripts, Dart, Go
 <span>Please create the directory if it does not exists.</span><br><br>
 
 <i>Ensure the formatters can be correctly working, you should take a look at above directory, the built-in formatters:<br>
-<lt>a. js.sh:</lt> check Node.js installed and can be accessed from command line.<br>
-<lt>b. go.sh:</lt> check Go installed and can be accessed from command line.<br>
-<lt>c. php.sh:</lt> check PHP installed and can be accessed from command line.<br>
-<lt>d. rust.sh:</lt> check Rust and rustfmt installed and can be accessed from command line.<br>
-<lt>e. tcl.sh:</lt> check Tcl installed and can be accessed from command line.<br>
-<lt>f. dart.sh:</lt> check Dart and dartfmt installed and can be accessed from command line.<br><br>
+<lt>js.sh:</lt> check Node.js installed and can be accessed from command line.<br>
+<lt>go.sh:</lt> check Go installed and can be accessed from command line.<br>
+<lt>php.sh:</lt> check PHP installed and can be accessed from command line.<br>
+<lt>rust.sh:</lt> check Rust and rustfmt installed and can be accessed from command line.<br>
+<lt>tcl.sh:</lt> check Tcl installed and can be accessed from command line.<br>
+<lt>dart.sh:</lt> check Dart and dartfmt installed and can be accessed from command line.<br><br>
 
 
 <b><i>Note: </i></b><br>
