--- a/en/speare.html
+++ b/en/speare.html
@@ -129,7 +129,7 @@ Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare
 
 
 <h2>Why not big software?</h2>
-<p>Waste time to maintain, wast big storage and runtime memory, waste power, waste time to upload and download. It's waste people's life! Every desktop developer should known one thing, the embedded system developers sometime even fighting for one byte of storage in some situation. They never think about memory and storage like embedded system developers, so more and more big monster there. In today's software industry, Unix philosophy has been throw away completely!</p>
+<p>Waste time to maintain, wast big storage and runtime memory, waste energy, waste time to upload and download. It's waste people's life! Every desktop developer should known one thing, the embedded system developers sometime even fighting for one byte of storage in some situation. They never think about memory and storage like embedded system developers, so more and more big monster there. In today's software industry, Unix philosophy has been throw away completely!</p>
 
 <p class="green">They make software as big as possible, as complex as possible, but I believe in the opposite philosophy. </p>
 
@@ -173,7 +173,8 @@ Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare
 <p>Speare seamlessly support debugging C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl scripts, more info please refer here: <a href="debugger.html" target="_blank" > → Speare debugger architecture</a>.</p>
 
 <h2>Speare Keyboard Shortcuts</h2>
-<p>Please refer the table: <a href="http://www.sevenuc.com/download/speare_shortcuts.pdf" target="_blank">speare_shortcuts.pdf</a>
+<p>
+Please refer the table: <a href="http://www.sevenuc.com/download/speare_shortcuts.pdf" target="_blank">speare_shortcuts.pdf</a>
 </p>
 
 
