--- a/en/speare.html
+++ b/en/speare.html
@@ -50,6 +50,7 @@ w {color:#ffc8c8; font-weight: bold;}
 <h2>Features</h2>
 <p><ul>
 <li>Ultra lightweight.</li>
+<li>Completely leverage "Keyboard shortcuts" for fast editing.</li>
 <li>Well designed workspace management. Intuitive and concise.</li>
 <li>High performance when managing large amount of files and big files.</li>
 <li>Fast search and replace in current document, selected folder, opened files and entire project.</li>
@@ -164,8 +165,8 @@ Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare
 </p>
 
 
-<h2>Ultra light code editor</h2>
-<p>Speare completely removed toolbar from a particular version, the purpose is to encourage people use keyboard shortcuts instead of clicking icons. That results Speare becomes to be an ultra concise text editor that let programming feels very light. Under the "Light Mode" code editor, switching workspace views by select menu items replace of click toolbar items.
+<h2>Fast Editing</h2>
+<p>Speare developed as an ultra light code editor that completely leverage "Keyboard shortcuts" for fast editing. Keyboard shortcuts instead of "moving mouse and click" can notably improve code editing experience. Real programmer use keyboard shortcuts as a habit constantly. Real programmer use and write command line applications as a habit constantly. Speare completely removed toolbar from a particular version, the purpose is to encourage people use keyboard shortcuts instead of clicking icons. Keyboard shortcuts can help people fast move focus between workspace and text editor, and fast switch between running apps such as Debug Server, Fossil, Web browser and Speare. 
 </p>
 
 
