--- a/en/speare.html
+++ b/en/speare.html
@@ -50,7 +50,6 @@ w {color:#ffc8c8; font-weight: bold;}
 <h2>Features</h2>
 <p><ul>
 <li>Ultra lightweight.</li>
-<li>Completely leverage "Keyboard shortcuts" for fast editing.</li>
 <li>Well designed workspace management. Intuitive and concise.</li>
 <li>High performance when managing large amount of files and big files.</li>
 <li>Fast search and replace in current document, selected folder, opened files and entire project.</li>
@@ -62,6 +61,7 @@ w {color:#ffc8c8; font-weight: bold;}
 <li>Keeping entire state after quit, the opened files, selection of each file and the cursor location.</li>
 <li>Parallel editing. Fast editing arbitrary files in parallel text views.</li>
 <li>Real-time diff. Show coloured code block of file changes with editing actions instantly.</li>
+<li>Completely leverage keyboard shortcuts for fast editing.</li>
 <li>Fonts and colours customisation, supports self-defined schemes.</li>
 <li>Efficiently manage working on files across quit, re-launch and project switching.</li>
 <li>Full featured Markdown and HTML editor and previewer, run Javascript code instantly, well-support Web development.</li>
