--- a/en/apps.html
+++ b/en/apps.html
@@ -163,7 +163,11 @@
 
 <p><br><br><br><br></p>
 <h2>About Apple App Store</h2>
-<p><b class="warning">Note: </b>One thing you must know is, they do very bad things on Apple App Store, these gentlemen leaved bad comments on the "ratings and reviews" of some good apps or vice versa to mislead people, so please judge one app's value by yourself instead of what they said.
+
+<p><b class="warning">Note: </b>One thing you must know is, they do very bad things on Apple App Store, these gentlemen leaved bad comments on the "ratings and reviews" of some good apps or vice versa to mislead people, so please judge one app's value by yourself instead of what they said.<br><br>
+
+
+For example, <a href="guard.html" target="_blank"><b>Guard7</b></a> and <a href="iosfinder.html" target="_blank"><b>iOSFinder</b></a> both are high quality software, but they maliciously attack them, go all out! The more they maliciously attack the apps, the more their bad intention are exposed, and the more affirmation of these apps. 
 </p>
 <br><br>
 
