--- a/en/lyricsmaker.html
+++ b/en/lyricsmaker.html
@@ -72,10 +72,7 @@ From May 2020, LyricsMaker turned to be a paid app, because thousands of people 
 
 <h2>Refrences</h2>
 <p><a href="littlefox.html"><img src="../images/littlefox/logo.png"  style="width: 40px;" /></a>
-<a href="littlefox.html">LittleFox</a>, the designedly small utility that used to synthesis subtitle with audio and video in a comfortable way.<br>
-
-<span><a href="http://unkown.org/" target="_blank"><img src="../images/unkown-org-logo.png" style="width: 40px;"/></a></span>
- my music video site: <a href="http://unkown.org"> http://unkown.org</a>, my creative artworks made by LyricsMaker and <a href="littlefox.html">LittleFox</a>.
+<a href="littlefox.html">LittleFox</a>, the designedly small utility that used to synthesis subtitle with audio and video in a comfortable way.
 </p>
 
 <br><br>
