--- a/en/speare.html
+++ b/en/speare.html
@@ -135,10 +135,10 @@ Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare
 <p class="green">They make software as big as possible, as complex as possible, but I believe in the opposite philosophy. </p>
 
 <h2>Why another code editor and IDE on macOS?</h2>
-<p>Although there are so many code editor and IDE available on macOS, but four feature of Speare code editor can make it unique:<br>
+<p>Although there are so many code editor and IDE available on macOS, but Speare code editor has its own unique characteristics:<br>
 <ol><li><lt>Lightweight.</lt> Most of the code editors on macOS are very heavy, bulky! But Speare code editor is really really ultra light. Only 6.2MB! </li>
 <li><lt>High Performance.</lt> Code editor developed with Javascript or Java have inherent defects that can't keep high performance when handle thousands of files for big project, such as VSCode, Atom, and NetBeans, Eclipse. Speare code editor can handle very big project, for very big C &amp; C++ projects, Java projects, Node projects, and very big game projects! Easily!</li>
-<li><lt>Cost.</lt> Most of the good code editors are very expensive, but Speare code editor is not! Of course, you can kindly purchase the pro version to donate some money to the author, but that is not mandatory.</li>
+<li><lt>Cost.</lt> <span class="warning">Speare don't like some app thickly marked as "Top Free Apps" and "Editor's Choice" but has hidden purchases in it, Speare has not any hidden purchases to trap people's money!</span> Most of the good code editors are very expensive, but Speare code editor is not! Of course, you can kindly purchase the pro version to donate some money to the author, but that is not mandatory.</li>
 <li><lt>Freedom.</lt> Feels light, simple and free. High performance code editor, flexibility to extend it to support special developing requirements and easily add a new programming language, most of these IDE on macOS can't give you such ability and freedom, can't give you smoothly coding experience when mixing multiple programming languages for big software projects. In fact, Speare code editor give you very flexible control to extend it to add syntax highlighting for a special document and debugging environment for a new programming language.
 </li>
 </ol></p>
