--- a/en/speare.html
+++ b/en/speare.html
@@ -138,14 +138,16 @@ Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare
 <p>Although there are so many code editor and IDE available on macOS, but Speare code editor has its own unique characteristics:<br>
 <ol><li><lt>Lightweight.</lt> Most of the code editors on macOS are very heavy, bulky! But Speare code editor is really really ultra light. Only 6.2MB! </li>
 <li><lt>High Performance.</lt> Code editor developed with Javascript or Java have inherent defects that can't keep high performance when handle thousands of files for big project, such as VSCode, Atom, and NetBeans, Eclipse. Speare code editor can handle very big project, for very big C &amp; C++ projects, Java projects, Node projects, and very big game projects! Easily!</li>
-<li><lt>Cost.</lt> <span class="warning">Speare don't like some app thickly marked as "Top Free Apps" and "Editor's Choice" but has hidden purchases in it, Speare has not any hidden purchases to trap people's money!</span> Most of the good code editors are very expensive, but Speare code editor is not! Of course, you can kindly purchase the pro version to donate some money to the author, but that is not mandatory.</li>
-<li><lt>Freedom.</lt> Feels light, simple and free. High performance code editor, flexibility to extend it to support special developing requirements and easily add a new programming language, most of these IDE on macOS can't give you such ability and freedom, can't give you smoothly coding experience when mixing multiple programming languages for big software projects. In fact, Speare code editor give you very flexible control to extend it to add syntax highlighting for a special document and debugging environment for a new programming language.
+<li><lt>Cost.</lt> Most of the good code editors or IDE on macOS are not free and even very expensive, but Speare code editor is free! Of course, you can kindly purchase the pro version to donate some money to the author, but that is not mandatory.</li>
+<li><lt>Freedom.</lt> Feels light, simple and free. High performance code editor, flexibility to extend it to support special developing requirements and easily add a new programming language, most of these IDE on macOS can't give you such ability and freedom, can't give you smoothly coding experience when mixing multiple programming languages for big software projects. But Speare code editor give you very flexible control to extend it to add syntax highlighting for a special document and debugging environment for a new programming language without paying.
 </li>
 </ol></p>
 
-
-<p class="green">Crafting software as small as possible.  →  <a href="debugger.html#whyc" target="_blank">Why C is the returned king of programming languages.</a></p>
-
+<h2>About Apple App Store</h2>
+<p><span class="warning">Eat food by your own hand but not the feeds they provides to your front.</span><br>
+1. Speare don't like some app (such as XXEdit) thickly marked as "Top Free Apps" and "Editor's Choice" but has hidden purchases in it, Speare has not any hidden purchases to trap people's money.<br>
+2. Speare don't like some app (such as XXRunner) thickly marked as "Top Paid Apps" but it's not up to that rank.
+</p>
 
 <h2>Code browser, call routines tracing and code analysis</h2>
 <p>Speare code editor helps end user to understand an existing code base by powerful code browser and call routines tracing functions. Speare code editor parses source code files and maintains the database of symbol definitions instantly while user editing, and presents useful contextual information to user automatically. It also use persistent bookmarks to remember key locations within functions or classes and their references. End user can quickly navigate function calls and callers and find references to variable, function or class instantly.</p>
@@ -183,6 +185,7 @@ Please refer the table: <a href="http://www.sevenuc.com/download/speare_shortcut
 <p>a. Press shortcut key "Command + R".<br>
 b. Click menu: "Command" → "Syntax Checking &amp; Run".<br>
 </p>
+<p class="green">Crafting software as small as possible.  →  <a href="debugger.html#whyc" target="_blank">Why C is the returned king of programming languages.</a></p>
 
 
 <h2>Add a New Colour Scheme</h2>
