--- a/en/service.html
+++ b/en/service.html
@@ -28,13 +28,15 @@
 
 <div class="jumbotron">
            
+<div style="display: none;">
 <h1>Services</h1>
 <h4>Senior business consulting services.</h4>
+</div>
+
 <p><br><br></p>
-<p><a href="../images/Ridiculous_Desk.png" target="_blank"><img src="../images/Ridiculous_Desk.png" class="screenshots"></a><br>
+<p><a href="../images/SlaveryEducation.jpg" target="_blank"><img src="../images/SlaveryEducation.jpg" class="screenshots"></a><br>
 </p>
-<p><b>"Ridiculous Desk"</b> was originally created by sevenuc.com, please keeping the copyright when you quoting it.
-</p>
+
 
 </div> 
 
