--- a/en/speare.html
+++ b/en/speare.html
@@ -35,11 +35,13 @@ w {color:#ffc8c8; font-weight: bold;}
 <a href="http://www.sevenuc.com/en/speare.html">Speare</a> is a small and friendly code editor. You can use it to edit source code files, programming and debugging. It designed to make programming feels light, simple and free. Speare not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare code editor includes an ultra lightweight debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise the debugging environment for a new programming language.</p>
     </div>
 
-<!--p class="greenbig">It's free!</p-->
+<p class="greenbig">It's free!</p>
 
+<div style="display:none;">
 <h2>It's not free now!</h2>
 <p>Speare has really good features, such as parallel editing, instant diff, high performance searching and symbol definition parsing. But after a long time, still no people kindly feed back any issue report or feature request, they just use it freely but don't willing to give respect to other's works. I changed my idea from "Free Forever" to "You should pay for good stuff". The app is really good but they made it down and down, that's made me angry, that's why Speare becomes a paid app from free app. Sorry.
 </p>
+</div>
 
 
 <p><a href="https://apps.apple.com/us/app/speare/id1473902558?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a><br><br><br><br></p>
