--- a/en/debugger.html
+++ b/en/debugger.html
@@ -49,8 +49,8 @@ The ultra light code editor.
 <img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br><br>
 <p>If you can't open the link above, please launch App Store and found <lt>"Speare pro"</lt> by searching.</p>
 
-<p><a href="../images/speare/debug_sqlite_with_speare_code_editor.png" target="_blank"><img src="../images/speare/debug_sqlite_with_speare_code_editor.png" class="screenshots"/></a><br>
-Screenshot of debugging <a href="https://sqlite.org/" target="_blank">SQLite</a> source code in Speare code editor.
+<p><a href="../images/speare/llvm_in_speare_code_editor.png" target="_blank"><img src="../images/speare/llvm_in_speare_code_editor.png" class="screenshots"/></a><br>
+Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare code editor.
 </p>
 
 
