--- a/en/speare.html
+++ b/en/speare.html
@@ -32,8 +32,14 @@ w {color:#ffc8c8; font-weight: bold;}
         <h1>Speare<br><em>Version 1.2.344</em></h1>
         <p class="greenbig">The ultra light code editor.</p>
         <p class="lead">
-<a href="http://www.sevenuc.com/en/speare.html">Speare</a> is a small and friendly code editor. You can use it to edit source code files, programming and debugging. It designed to make programming feels light, simple and free. Speare not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare code editor includes an ultra lightweight debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise the debugging environment for a new programming language.</p>
+<a href="http://www.sevenuc.com/en/speare.html">Speare</a> is a small and friendly code editor. It was originally developed to provide a native scripting language debugging environment that seamlessly integrated with C and C++, you can use it to edit source code files, programming and debugging. Speare designed to make programming feels light, simple and free. Speare not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare includes an ultra lightweight debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise the debugging environment for a new programming language..</p>
     </div>
+
+<h2 class="dark">What's new</h2>
+<p class="dark">1. Highlighting files that has no extension name by recognise it's Shebang, i.e. the first line of the text file.<br>
+2. Fast editing arbitrary files in parallel text views. "Parallel Editing" allows user stick one file in the bottom view and switch different files in the top view. 
+</p>
+
 
 <p class="greenbig">It's free!</p>
 
@@ -75,21 +81,11 @@ w {color:#ffc8c8; font-weight: bold;}
 
 
 <h2>Screenshot</h2>
-<p><a href="../images/speare/LLVM_in_Speare.png" target="_blank"><img src="../images/speare/LLVM_in_Speare.png" class="screenshots"/></a><br>
-Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare code editor.
+<p><a href="../images/speare/debug_sqlite_with_speare_code_editor.png" target="_blank"><img src="../images/speare/debug_sqlite_with_speare_code_editor.png" class="screenshots"/></a><br>
+Screenshot of <a href="https://sqlite.org/" target="_blank">SQLite</a> source code "Parallel Editing" in Speare code editor.
 </p>
 
 
-<h2 class="dark">What's new</h2>
-<p class="dark">1. Improvement of "Lite Mode", i.e. without toolbar and hidden workspace, this is useful and feels more light when open and edit several file but not work on a project that has large number of files. This function turn Speare to a TextEdit-like text editor but has more features, such as line number display, syntax highlighting etc.<br>
-2. Highlighting files that has no extension name by recognise it's Shebang, i.e. the first line of the text file.
-</p>
-
-
-<h2>Parallel Editing</h2>
-<p>
-<a href="parallelediting.html" target="_blank">Parallel Editing</a> allows user stick one file in the bottom view and fast editing code by switching different files in the top view on-the-flying.
-</p>
 
 <h2>Fast edit several files separately</h2>
 <p>Just drag the file one by one from Finder and drop into workspace, edit them and then right-click to "Remove All".</p>
@@ -170,7 +166,7 @@ Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare
 
 
 <h2>Fast Editing</h2>
-<p>Speare developed as an ultra light code editor that completely leverage "Keyboard shortcuts" for fast editing. Keyboard shortcuts instead of "moving mouse and click" can notably improve code editing experience. Real programmer use keyboard shortcuts as a habit constantly. Real programmer use and write command line applications as a habit constantly. Speare completely removed toolbar from a particular version, the purpose is to encourage people use keyboard shortcuts instead of clicking icons. Keyboard shortcuts can help people fast move focus between workspace and text editor, and fast switch between running apps such as Debug Server, Fossil, Web browser and Speare. 
+<p>Speare developed as an ultra light code editor that completely leverage "Keyboard shortcuts" for fast editing. Keyboard shortcuts instead of "moving mouse and click" can notably improve code editing experience. Real programmer use keyboard shortcuts as a habit constantly. Real programmer use and write command line applications as a habit constantly. Keyboard shortcuts can help people fast move focus between workspace and text editor, and fast switch between running apps such as Debug Server, Fossil, Web browser and Speare. 
 </p>
 
 
