--- a/en/ccreviewer.html
+++ b/en/ccreviewer.html
@@ -25,16 +25,15 @@
 <div class="container-fluid">
 
     <div class="jumbotron">
-        <p><img src="../images/reviewer/logo.png" style="width: 120px;" /></p>
+        <p><img src="../images/ccreviewer/logo.png" style="width: 120px;" /></p>
         <h1>Chinese Chess Reviewer</h1>
         <p class="greenbig">The powerful Chinese chess machine</p>
         <p class="lead">
-<b>Chinese Chess Reviewer (aka CCReviewer)</b>, is a powerful chess machine. It was designed to record chess moves in international competitions. It have recorded thousands of large scale international chess games and you can use it to analyse these records and even participate in any of them at anytime. </p>
+<b>Chinese Chess Reviewer (aka CCReviewer)</b> is a powerful chess machine. This chess engine was designed to record, playback and analysis chess moves in international competitions. CCReviewer have recorded thousands of large scale international chess games and these records can be used to learn, analyse how masters applied their strategies in real games and even has the ability to allow end user participate in and add self's moves to any game in any event at any arbitrary single move step. </p>
     </div>
-    
-<p><span class="warning">This is the version of CCReviewer for iOS.</span><br>
-CCReviewer is a carefully designed chess review and learning tool on mobile device. It is a powerful chess analyser, move recorder and game records player. You can review game records and see the entire game process at any detailed steps. Learn how the masters playing Chinese chess in real games from 1980s. It's also an app to learn how to play Chinese Chess in an efficient way. The app has a build-in database that collected more than 40,000 games by 4000 professional players, so much master's moves that you want to deeply learning included!</p>
 
+<p><span class="warning">This is the version of CCReviewer for macOS.</span><br>
+CCReviewer is a powerful chess analyser, move recorder and game records player. You can review game records and see the entire game process at any detailed steps. Learn how the masters playing Chinese chess in real games from 1980s. It's also an app to learn how to play Chinese Chess in an efficient way. The app has a build-in database that collected more than 40,000 games by 4000 professional players, so much master's moves that you want to deeply learning included!</p>
 
 <h2>Features</h2>
 <ul><li><b>Autoplay or manually playback</b>. You can playback any game in the built-in huge database step by step. You can also review the game records, see chess move automatically step by step, learn how chess stratagem applied in real games visually. <br><br></li>
@@ -43,29 +42,16 @@ CCReviewer is a carefully designed chess review and learning tool on mobile devi
 <li><b>Record moves</b>. The app can record each of your move and reload and playback them at any time.<br><br></li>
 <li><b>Alternative stratagems</b>. The app even allow you go to or back to any move, insert your own moves and add annotation to any single move step, and all of changes will be automatically saved. Try different stratagems on same game is a very important approach to analyse chess game. This is a very important feature that give your the ability to participate in the history games or any new added games, and even edit any of the records. You can travel with the time machine back to that moment and game with masters at any time point. What an exciting thing it is!<br><br></li>
 <li><b>Analysis</b>. Analyse games from the build-in huge database or your new added games by combine different search conditions.<br><br></li>
-<li><b>Real game mode</b>. Support full screen real game mode with time counter.<br><br></li>
 <li><b>Write comments</b>. Add or edit your note at any game or on any single move step, arbitrarily!<br><br></li>
 <li><b>Bookmark</b>. Mark your favourite or frequently used and review them in a convenient way.<br><br></li>
-<li><b>Remember</b>. The app can remember your last search items, last added or opened items etc, so intimate design.</li></ul>
+<li><b>Remember</b>. The app can remember your last search items, last added or opened items etc, so intimate design.</li>
+</ul>
 
-<h2>Input Game Records</h2>
-<p><b>Step 1.</b> Check "Full Screen" on and then click "Play".<br>
-<b>Step 2.</b> Click "Home" icon on the left corner of the bottom, and then select "Save moves" when the app prompted a dialog box, here, you have two options:<br><br>
-&nbsp;&nbsp;&nbsp;<i><b>a.</b> Directly input event name and game data when add your first game record. The app will automatically create a new Event for you and add your data as a new record to it.</i><br>
-&nbsp;&nbsp;&nbsp;<i><b>b.</b> Select an event and then add record to it after you have already created at least one event.</i><br><br>
-<b>Step 3.</b> Click "Cancel" on the "Select an event" window then the app will allow you to create a new "Event" just like "option a", input game data then click "Save".</i><br>
-</p>
+<h2>Screenshots</h2>
+<p><a href="../images/ccreviewer/1.png" target="_blank"><img src="../images/ccreviewer/1.png" class="screenshots"/></a></p>
+<p><a href="../images/ccreviewer/1.png" target="_blank"><img src="../images/ccreviewer/2.png" class="screenshots"/></a></p>
+<p><br><br></p>
 
-<p><strong>Other Situations</strong><br>
-<ul><li>You can play game records from a search, add some new moves and then update the game records.</li>
-<li>You can directly play in "Full Screen" mode and then save your moves.</li></ul>
-</p>
-
-<h2>Tips</h2>
-<div class="small"><ul><li>In real game mode, Red first by default.</li>
-<li>Move finger. The chess rules will be applied automatically when you move your finger, the chess will back to its start position if target is illegal.</li>
-<li>You can scroll the narrow area near the bottom to see more info when autoplaying searched records.</li>
-</ul></div>
 
 <h2>References</h2>
 <p>
@@ -75,58 +61,8 @@ CCReviewer is a carefully designed chess review and learning tool on mobile devi
 <p>
 Chinese Chess contains the ancient oriental profound philosophy and wisdom, that results it very IQ challenge and very attractive unique style maybe than any game you've been played, you can challenge it in your whole life, and it's suitable for both children and parents. For children, play more will make them smarter more.<br></p>
 
-<p>Download the funny app from App Store: <br><br><a class ="appstore_download_link" href="https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=1293135726&mt=8"></a> <br></p>
-<p><br><br></p>
-
-
-<h2>Screenshots</h2>
-<div class="screenshots">
-<div class="row">
-   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="../images/reviewer/1.png" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="../images/reviewer/2.png" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="../images/reviewer/6.png" alt="Third slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="../images/reviewer/3.png" alt="Third slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="../images/reviewer/4.png" alt="Third slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="../images/reviewer/5.png" alt="Third slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-  </div>
-</div>
-</div>
-
-
 <p><br><br></p>
 <hr>
-
 <h2>Challenge Yourself!</h2>
 <p>There is an ancient DOS game from 1980s, Chinese Chess Master III ( 將族 III), the AI algorithm of the game is amazing powerful! Before AlphaGo from google versus Lee Sedol (one of the top Go game players) at March 2016, many years ago, this excellent DOS game made so many professional human chess players lost. How powerful the chess players in this game are unknown! AlphaGo run with distributed 1,920 CPUs and 280 GPU and more, but this DOS game is only 926KB running on one CPU with 64KB memory! Might this small game requires you to challenge it in your whole life! Maybe the weakest one, Mr. pig can easily beat you! Here it is!</p>
 
@@ -139,7 +75,6 @@ Chinese Chess contains the ancient oriental profound philosophy and wisdom, that
 <p>You can challenge this dead powerful game on Android phone, iPhone, iPad, or on Macintosh, Windows and Linux, anywhere you required to play on, I'm pleasured to packing it for you on any platform. Further more, I've collected tons of wonderful DOS game/arcade game so many years, if you're interesting in play them again, please email your request.</p>
 
 <p><br><br></p>
-
 
 
 <footer>
