--- a/en/debugger.html
+++ b/en/debugger.html
@@ -84,6 +84,10 @@ Watches used to evaluate variable or expression and their values can be real-tim
 <p>Speare code editor provides an intuitive debugging environment allows adding breakpoints and the execution flow can be viewed and controlled and has the abilities that an IDE debugger will give you over trace execution in code, view the call stack at any point in time, giving you a context for your current stack frame, step into libraries or sub modules that you want to tracing the debug symbols, and change variable values while the program is running. It provides simple interfaces that can be integrated with any command line tools without boring configuration, giving you the flexibility you need to debug code at hand. The debuggers of Speare code editor, the source-level debuggers, helps you step through the code line by line and observe the runtime behaviour of your program and got a better understanding of your code.
 </p>
 
+<p>
+<a href="../images/speare/debug_wordpress_in_speare_code_editor.png" target="_blank"><img src="../images/speare/debug_wordpress_in_speare_code_editor.png" class="screenshots"/></a><br>
+Screenshot of debugging <a href="https://wordpress.org/" target="_blank">WordPress</a> in Speare code editor.
+</p>
 
 <h2>About Software Industry</h2>
 <p>They obviously know a technology is garbage, a project shouldn't be started, but they don’t have enough courage to admit the mistake, correct the mistake, cancel the project and abandon that technology.
