--- a/en/reviewer.html
+++ b/en/reviewer.html
@@ -128,7 +128,7 @@ Chinese Chess contains the ancient oriental profound philosophy and wisdom, that
 <hr>
 
 <h2>Challenge Yourself!</h2>
-<p>There is an ancient DOS game from 1980s, Chinese Chess Master III ( 將族 III), the AI algorithm of the game is amazing powerful! Before AlphaGo from google versus Lee Sedol (one of the top Go game players) at March 2016, many years ago, this excellent DOS game made so many professional human chess players lost. How powerful the chess players in this game are unknown! AlphaGo run with distributed 1,920 CPUs and 280 GPU and more, but this DOS game is only 926KB running on one CPU with 64KB memory! Might this small game requires you to challenge it in your whole life! Maybe the weakest one, Mr. pig can easily beat you! Here it is!</p>
+<p>There is an ancient DOS game from 1980s, Chinese Chess Master III ( 將族 III), the AI algorithm of the game is amazing powerful! The AI engine doesn't use any deep learning algorithms that almost every modern AI app used. Before AlphaGo from google versus Lee Sedol (one of the top Go game players) at March 2016, many years ago, this excellent DOS game made so many professional human chess players lost. How powerful the chess players in this game are unknown! AlphaGo run with distributed 1,920 CPUs and 280 GPU and more, but this DOS game is only 926KB running on one CPU with 64KB memory! Might this small game requires you to challenge it in your whole life! Maybe the weakest one, Mr. pig can easily beat you! Here it is!</p>
 
 <div class="screenshots">
 <p><a href="../images/reviewer/cch1.png" target="_blank"><img class="screenshots" src="../images/reviewer/cch1.png" class="screenshots"></a><p>
