--- a/en/ccreviewer.html
+++ b/en/ccreviewer.html
@@ -26,11 +26,18 @@
 
     <div class="jumbotron">
         <p><img src="../images/ccreviewer/logo.png" style="width: 120px;" /></p>
-        <h1>Chinese Chess Reviewer</h1>
-        <p class="greenbig">The powerful Chinese chess machine</p>
+        <h1>CCReviewer2</h1>
+        <p class="greenbig">Chinese Chess Reviewer, the powerful Chinese chess machine</p>
         <p class="lead">
 <b>Chinese Chess Reviewer (aka CCReviewer)</b> is a powerful chess machine. This chess engine was designed to record, playback and analysis chess moves in international competitions. CCReviewer have recorded thousands of large scale international chess games and these records can be used to learn, analyse how masters applied their strategies in real games and even has the ability to allow end user participate in and add self's moves to any game in any event at any arbitrary single move step. </p>
+
     </div>
+
+
+<p><a href="https://apps.apple.com/us/app/ccreviewer2/id1570366767?mt=12" target="_blank" class="appstore_download_link">
+<img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br>
+<p>If you can't open the link above, please launch App Store and found <lt>"CCReviewer2"</lt> by searching.</p>
+
 
 <p><span class="warning">This is the version of CCReviewer for macOS.</span><br>
 CCReviewer is a powerful chess analyser, move recorder and game records player. You can review game records and see the entire game process at any detailed steps. Learn how the masters playing Chinese chess in real games from 1980s. It's also an app to learn how to play Chinese Chess in an efficient way. The app has a build-in database that collected more than 40,000 games by 4000 professional players, so much master's moves that you want to deeply learning included!</p>
