--- a/en/ccreviewer.html
+++ b/en/ccreviewer.html
@@ -39,7 +39,7 @@
 <p>If you can't open the link above, please launch App Store and found <lt>"CCReviewer2"</lt> by searching.</p>
 
 
-<p><span class="warning">This is the version of CCReviewer for macOS.</span><br>
+<p><span class="warning">This is the version of CCReviewer for Macintosh (macOS).</span><br>
 CCReviewer is a powerful chess analyser, move recorder and game records player. You can review game records and see the entire game process at any detailed steps. Learn how the masters playing Chinese chess in real games from 1980s. It's also an app to learn how to play Chinese Chess in an efficient way. The app has a build-in database that collected more than 40,000 games by 4000 professional players, so much master's moves that you want to deeply learning included!</p>
 
 <h2>Features</h2>
