--- a/en/reviewer.html
+++ b/en/reviewer.html
@@ -32,33 +32,39 @@
 <b>Chinese Chess Reviewer (aka CCReviewer)</b>, is a powerful chess machine. It was designed to record chess moves in international competitions. It have recorded thousands of large scale international chess games and you can use it to analyse these records and even participate in any of them at anytime. </p>
     </div>
     
-<p><span class="warning">This is the version of CCReviewer for iOS.</span><br>
+<h2 class="dark">What's new</h2>
+<p class="dark">1. <b>AI Mode</b>: human chess player versus computer mode allows people play chess with cumputer AI engine.<br>
+2. <b>Network P2P Remote Mode</b>: this feature designed to help two people or more to conveniently play chess in their office, local area network, internet and any network that the two computer can be connected each other.
+</p>
+    
+<p>
+<span class="warning">This is the version of CCReviewer for iOS.</span><br>
 CCReviewer is a carefully designed chess review and learning tool on mobile device. It is a powerful chess analyser, move recorder and game records player. You can review game records and see the entire game process at any detailed steps. Learn how the masters playing Chinese chess in real games from 1980s. It's also an app to learn how to play Chinese Chess in an efficient way. The app has a build-in database that collected more than 40,000 games by 4000 professional players, so much master's moves that you want to deeply learning included!</p>
 
 
 <h2>Features</h2>
-<ul><li><b>Autoplay or manually playback</b>. You can playback any game in the built-in huge database step by step. You can also review the game records, see chess move automatically step by step, learn how chess stratagem applied in real games visually. <br><br></li>
-<li><b>Unlimited undo &amp; redo</b>. You can cancel moves or redo moves at any time, no matter in autoplay mode or real game mode. That is, forward or backward any move steps just like dragging the progress bar in your music or video player. <br><br></li>
-<li><b>Input game data</b>. You can input game data and then analyse them later. Batch adding records also supported.<br><br></li>
-<li><b>Record moves</b>. The app can record each of your move and reload and playback them at any time.<br><br></li>
-<li><b>Alternative stratagems</b>. The app even allow you go to or back to any move, insert your own moves and add annotation to any single move step, and all of changes will be automatically saved. Try different stratagems on same game is a very important approach to analyse chess game. This is a very important feature that give your the ability to participate in the history games or any new added games, and even edit any of the records. You can travel with the time machine back to that moment and game with masters at any time point. What an exciting thing it is!<br><br></li>
-<li><b>Analysis</b>. Analyse games from the build-in huge database or your new added games by combine different search conditions.<br><br></li>
-<li><b>Real game mode</b>. Support full screen real game mode with time counter.<br><br></li>
-<li><b>Write comments</b>. Add or edit your note at any game or on any single move step, arbitrarily!<br><br></li>
-<li><b>Bookmark</b>. Mark your favourite or frequently used and review them in a convenient way.<br><br></li>
-<li><b>Remember</b>. The app can remember your last search items, last added or opened items etc, so intimate design.</li></ul>
+<ul><li><lt>Autoplay or manually playback</lt>. You can playback any game in the built-in huge database step by step. You can also review the game records, see chess move automatically step by step, learn how chess stratagem applied in real games visually.</li>
+<li><lt>Unlimited undo &amp; redo</lt>. You can cancel moves or redo moves at any time, no matter in autoplay mode or real game mode. That is, forward or backward any move steps just like dragging the progress bar in your music or video player.</li>
+<li><lt>Input game data</lt>. You can input game data and then analyse them later. Batch adding records also supported.</li>
+<li><lt>Record moves</lt>. The app can record each of your move and reload and playback them at any time.</li>
+<li><lt>Alternative stratagems</lt>. The app even allow you go to or back to any move, insert your own moves and add annotation to any single move step, and all of changes will be automatically saved. Try different stratagems on same game is a very important approach to analyse chess game. This is a very important feature that give your the ability to participate in the history games or any new added games, and even edit any of the records. You can travel with the time machine back to that moment and game with masters at any time point. What an exciting thing it is!</li>
+<li><lt>Analysis</lt>. Analyse games from the build-in huge database or your new added games by combine different search conditions.</li>
+<li><lt>Real game mode</lt>. Support full screen real game mode with time counter.</li>
+<li><lt>Write comments</lt>. Add or edit your note at any game or on any single move step, arbitrarily!</li>
+<li><lt>Bookmark</lt>. Mark your favourite or frequently used and review them in a convenient way.</li>
+<li><lt>Remember</lt>. The app can remember your last search items, last added or opened items etc, so intimate design.</li></ul>
 
 <h2>Input Game Records</h2>
 <p><b>Step 1.</b> Check "Full Screen" on and then click "Play".<br>
-<b>Step 2.</b> Click "Home" icon on the left corner of the bottom, and then select "Save moves" when the app prompted a dialog box, here, you have two options:<br><br>
+<b>Step 2.</b> Click "Home" icon on the left corner of the bottom, and then select "Save moves" when the app prompted a dialog box, here, you have two options:<br>
 &nbsp;&nbsp;&nbsp;<i><b>a.</b> Directly input event name and game data when add your first game record. The app will automatically create a new Event for you and add your data as a new record to it.</i><br>
-&nbsp;&nbsp;&nbsp;<i><b>b.</b> Select an event and then add record to it after you have already created at least one event.</i><br><br>
+&nbsp;&nbsp;&nbsp;<i><b>b.</b> Select an event and then add record to it after you have already created at least one event.</i><br>
 <b>Step 3.</b> Click "Cancel" on the "Select an event" window then the app will allow you to create a new "Event" just like "option a", input game data then click "Save".</i><br>
 </p>
 
 <p><strong>Other Situations</strong><br>
-<ul><li>You can play game records from a search, add some new moves and then update the game records.</li>
-<li>You can directly play in "Full Screen" mode and then save your moves.</li></ul>
+a. You can play game records from a search, add some new moves and then update the game records.<br>
+b. You can directly play in "Full Screen" mode and then save your moves.
 </p>
 
 <h2>Tips</h2>
