--- a/en/ccreviewer.html
+++ b/en/ccreviewer.html
@@ -27,32 +27,35 @@
     <div class="jumbotron">
         <p><img src="../images/ccreviewer/logo.png" style="width: 120px;" /></p>
         <h1>CCReviewer2</h1>
-        <p class="greenbig">Chinese Chess Reviewer, the powerful Chinese chess machine</p>
+        <p class="greenbig">Chinese Chess Reviewer, the powerful Chinese chess machine.</p>
         <p class="lead">
 <b>Chinese Chess Reviewer (aka CCReviewer)</b> is a powerful chess machine. This chess engine was designed to record, playback and analysis chess moves in international competitions. CCReviewer have recorded thousands of large scale international chess games and these records can be used to learn, analyse how masters applied their strategies in real games and even has the ability to allow end user participate in and add self's moves to any game in any event at any arbitrary single move step. </p>
 
     </div>
 
-
-<p><a href="https://apps.apple.com/us/app/ccreviewer2/id1570366767?mt=12" target="_blank" class="appstore_download_link">
-<img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br>
-<p>If you can't open the link above, please launch App Store and found <lt>"CCReviewer2"</lt> by searching.</p>
-
+<h2 class="dark">What's new</h2>
+<p class="dark">1. <b>AI Mode</b>: human chess player versus computer mode allows people play chess with cumputer AI engine.<br>
+2. <b>Network P2P Remote Mode</b>: this feature designed to help two people or more to conveniently play chess in their office, local area network, internet and any network that the two computer can be connected each other.
+</p>
 
 <p><span class="warning">This is the version of CCReviewer for Macintosh (macOS).</span><br>
 CCReviewer is a powerful chess analyser, move recorder and game records player. You can review game records and see the entire game process at any detailed steps. Learn how the masters playing Chinese chess in real games from 1980s. It's also an app to learn how to play Chinese Chess in an efficient way. The app has a build-in database that collected more than 40,000 games by 4000 professional players, so much master's moves that you want to deeply learning included!</p>
 
 <h2>Features</h2>
-<ul><li><b>Autoplay or manually playback</b>. You can playback any game in the built-in huge database step by step. You can also review the game records, see chess move automatically step by step, learn how chess stratagem applied in real games visually. <br><br></li>
-<li><b>Unlimited undo &amp; redo</b>. You can cancel moves or redo moves at any time, no matter in autoplay mode or real game mode. That is, forward or backward any move steps just like dragging the progress bar in your music or video player. <br><br></li>
-<li><b>Input game data</b>. You can input game data and then analyse them later. Batch adding records also supported.<br><br></li>
-<li><b>Record moves</b>. The app can record each of your move and reload and playback them at any time.<br><br></li>
-<li><b>Alternative stratagems</b>. The app even allow you go to or back to any move, insert your own moves and add annotation to any single move step, and all of changes will be automatically saved. Try different stratagems on same game is a very important approach to analyse chess game. This is a very important feature that give your the ability to participate in the history games or any new added games, and even edit any of the records. You can travel with the time machine back to that moment and game with masters at any time point. What an exciting thing it is!<br><br></li>
-<li><b>Analysis</b>. Analyse games from the build-in huge database or your new added games by combine different search conditions.<br><br></li>
-<li><b>Write comments</b>. Add or edit your note at any game or on any single move step, arbitrarily!<br><br></li>
-<li><b>Bookmark</b>. Mark your favourite or frequently used and review them in a convenient way.<br><br></li>
-<li><b>Remember</b>. The app can remember your last search items, last added or opened items etc, so intimate design.</li>
+<ul><li><lt>Autoplay or manually playback</lt>. You can playback any game in the built-in huge database step by step. You can also review the game records, see chess move automatically step by step, learn how chess stratagem applied in real games visually.</li>
+<li><lt>Unlimited undo &amp; redo</lt>. You can cancel moves or redo moves at any time, no matter in autoplay mode or real game mode. That is, forward or backward any move steps just like dragging the progress bar in your music or video player.</li>
+<li><lt>Input game data</lt>. You can input game data and then analyse them later. Batch adding records also supported.</li>
+<li><lt>Record moves</lt>. The app can record each of your move and reload and playback them at any time.</li>
+<li><lt>Alternative stratagems</lt>. The app even allow you go to or back to any move, insert your own moves and add annotation to any single move step, and all of changes will be automatically saved. Try different stratagems on same game is a very important approach to analyse chess game. This is a very important feature that give your the ability to participate in the history games or any new added games, and even edit any of the records. You can travel with the time machine back to that moment and game with masters at any time point. What an exciting thing it is!</li>
+<li><lt>Analysis</lt>. Analyse games from the build-in huge database or your new added games by combine different search conditions.</li>
+<li><lt>Write comments</lt>. Add or edit your note at any game or on any single move step, arbitrarily!</li>
+<li><lt>Bookmark</lt>. Mark your favourite or frequently used and review them in a convenient way.</li>
+<li><lt>Remember</lt>. The app can remember your last search items, last added or opened items etc, so intimate design.</li>
 </ul>
+
+<p><a href="https://apps.apple.com/us/app/ccreviewer2/id1570366767?mt=12" target="_blank" class="appstore_download_link">
+<img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br><br>
+<p>If you can't open the link above, please launch App Store and found <lt>"CCReviewer2"</lt> by searching.</p>
 
 <h2>Screenshots</h2>
 <p><a href="../images/ccreviewer/1.png" target="_blank"><img src="../images/ccreviewer/1.png" class="screenshots"/></a></p>
