--- a/en/ccreviewer.html
+++ b/en/ccreviewer.html
@@ -34,8 +34,8 @@
     </div>
 
 <h2 class="dark">What's new</h2>
-<p class="dark">1. <b>AI Mode</b>: human chess player versus computer mode allows people play chess with cumputer AI engine.<br>
-2. <b>Network P2P Remote Mode</b>: this feature designed to help two people or more to conveniently play chess in their office, local area network, internet and any network that the two computer can be connected each other.
+<p class="dark">1. <b>AI Mode</b>: human chess player versus computer mode allows people play chess with cumputer AI engine, black first by default.<br>
+2. <b>Network P2P Remote Mode</b>: this feature designed to help two people or more to conveniently play chess in their office, local area network, internet and any network that the two computer can be connected each other, red first by default.
 </p>
 
 <p><span class="warning">This is the version of CCReviewer for Macintosh (macOS).</span><br>
