--- a/en/reviewer.html
+++ b/en/reviewer.html
@@ -31,10 +31,10 @@
         <p class="lead">
 <b>Chinese Chess Reviewer (aka CCReviewer)</b>, is a powerful chess machine. It was designed to record chess moves in international competitions. It have recorded thousands of large scale international chess games and you can use it to analyse these records and even participate in any of them at anytime. </p>
     </div>
-    
+
 <h2 class="dark">What's new</h2>
 <p class="dark">1. <b>AI Mode</b>: human chess player versus computer mode allows people play chess with cumputer AI engine.<br>
-2. <b>Network P2P Remote Mode</b>: this feature designed to help two people or more to conveniently play chess in their office, local area network, internet and any network that the two computer can be connected each other.
+2. <b>Network P2P Remote Mode</b>: this feature designed to help two people or more to conveniently play chess in their office, local area network, internet and any network that the two computer can be connected each other, red first by default.
 </p>
     
 <p>
@@ -68,7 +68,9 @@ b. You can directly play in "Full Screen" mode and then save your moves.
 </p>
 
 <h2>Tips</h2>
-<div class="small"><ul><li>In real game mode, Red first by default.</li>
+<div class="small">
+<ul><li>In AI mode, black first by default.</li>
+<li>In real game mode, red first by default.</li>
 <li>Move finger. The chess rules will be applied automatically when you move your finger, the chess will back to its start position if target is illegal.</li>
 <li>You can scroll the narrow area near the bottom to see more info when autoplaying searched records.</li>
 </ul></div>
