--- a/en/debugger.html
+++ b/en/debugger.html
@@ -34,7 +34,7 @@
   _\ \/ _ \/ -_) _ `/ __/ -_)
  /___/ .__/\__/\_,_/_/  \__/
     /_/
-Speare Pro v1.2.344
+Speare v1.2.344
 The ultra light code editor.
 (c) 2021 http://www.sevenuc.com
 </pre></p>
@@ -45,9 +45,9 @@ The ultra light code editor.
     </div>
 
 
-<p><a href="https://apps.apple.com/us/app/speare-pro/id1477773605?mt=12" target="_blank" class="appstore_download_link">
+<p><a href="https://apps.apple.com/us/app/speare/id1473902558?mt=12" target="_blank" class="appstore_download_link">
 <img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br><br>
-<p>If you can't open the link above, please launch App Store and found <lt>"Speare pro"</lt> by searching.</p>
+<p>If you can't open the link above, please launch App Store and found <lt>"Speare"</lt> by searching.</p>
 
 <p><a href="../images/speare/llvm_in_speare_code_editor.png" target="_blank"><img src="../images/speare/llvm_in_speare_code_editor.png" class="screenshots"/></a><br>
 Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare code editor.
@@ -114,8 +114,6 @@ On the contrary, they not only want to recover their cost, they even drag custom
 <p><i><gr>First known how to write close and free and then try open and alloc, ensure clean first and then do something is the philosophy and bits of C programming, this rule also suitable to other languages.</gr></i></p>
 
 <p>C is not safe but it is the strongest programming language and the most strongest softwares were written with it, including operation system and the most important infrastructure of internet and software industry, think about BIND, Apache, Nginx, MySQL, PostgreSQL, SQLite, Berkeley DB, Redis, Memcached, PHP, Perl, Ruby, Python, Lua, Git, FFmpeg and other countless excellent softwares. If sqlite and git were written with C++ or Java, I'll throw them away immediately. C is top professionals' language, a mature developer may needs ten years to really write software with it. The product quality of the software industry is directly proportional to the number of experienced C programming experts.</p>
-
-
 
 <h2>The Tao and Kung Fu of Programming</h2>
 <p><i><b>Why all attempts failed?</b> They want to create new programming language to resolve problem in software industry, but all attempts failed. Any new programming language that intended to achieve a seamless translation from Lisp (or Lisp like language, e.g Javascript) to native executable code will failed at final. The product quality of the software industry is directly proportional to the number of experienced C programming experts, but experienced C developer and C ninja are rare and rare, because only a few people can walk on this difficult way. C is really unsafe and really difficult to master, to be a mature C developer or an C expert, a developer may needs about ten years to continually experience it. Programming is difficult, there is no shortcuts for programming, programming language itself can't resolve it. Programming in C++ is not essential, but mast how to OOP in C++ is essential, there's no any other language can replace the importance of it and no any shortcut to bypass OOP with it, master OOP in C++ and then you can better programming in other high-level languages. Only the honest and continuous improving of the skills of OOP is the reliable way. Only the honest and continuous improving of the skills of C programming is the reliable way.<br><br>
