--- a/en/speare.html
+++ b/en/speare.html
@@ -40,9 +40,7 @@ w {color:#ffc8c8; font-weight: bold;}
 2. Fast editing arbitrary files in parallel text views. "Parallel Editing" allows user stick one file in the bottom view and switch different files in the top view. 
 </p>
 
-
-<p class="greenbig">It's free!</p>
-
+<!--p class="greenbig">It's free!</p-->
 <div style="display:none;">
 <h2>It's not free now!</h2>
 <p>Speare has really good features, such as parallel editing, instant diff, high performance searching and symbol definition parsing. But after a long time, still no people kindly feed back any issue report or feature request, they just use it freely but don't willing to give respect to other's works. I changed my idea from "Free Forever" to "You should pay for good stuff". The app is really good but they made it down and down, that's made me angry, that's why Speare becomes a paid app from free app. Sorry.
@@ -52,7 +50,7 @@ w {color:#ffc8c8; font-weight: bold;}
 
 <p><a href="https://apps.apple.com/us/app/speare/id1473902558?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a><br><br><br><br></p>
 
-<p>If you can't open the link above, please launch App Store and found Speare by searching. <span class="green">Please kindly donate the author</span> by purchasing <a href="debugger.html" target="_blank">the pro version</a> or other app developed by the author, your donation will drive the author to continually improve it, or please kindly recommend this app on your blog or rate this app so that helping other people can more easily find it.</p>
+<p>If you can't open the link above, please launch App Store and found Speare by searching.</p>
 
 
 <h2>Features</h2>
@@ -84,8 +82,6 @@ w {color:#ffc8c8; font-weight: bold;}
 <p><a href="../images/speare/debug_sqlite_with_speare_code_editor.png" target="_blank"><img src="../images/speare/debug_sqlite_with_speare_code_editor.png" class="screenshots"/></a><br>
 Screenshot of <a href="https://sqlite.org/" target="_blank">SQLite</a> source code "Parallel Editing" in Speare code editor.
 </p>
-
-
 
 <h2>Fast edit several files separately</h2>
 <p>Just drag the file one by one from Finder and drop into workspace, edit them and then right-click to "Remove All".</p>
@@ -136,20 +132,20 @@ Screenshot of <a href="https://sqlite.org/" target="_blank">SQLite</a> source co
 <p>Although there are so many code editor and IDE available on macOS, but Speare code editor has its own unique characteristics:<br>
 <ol><li><lt>Lightweight.</lt> Most of the code editors on macOS are very heavy, bulky! But Speare code editor is really really ultra light. Only 6.2MB! </li>
 <li><lt>High Performance.</lt> Code editor developed with Javascript or Java have inherent defects that can't keep high performance when handle thousands of files for big project, such as VSCode, Atom, and NetBeans, Eclipse. Speare code editor can handle very big project, for very big C &amp; C++ projects, Java projects, Node projects, and very big game projects! Easily!</li>
-<li><lt>Cost.</lt> Most of the good code editors or IDE on macOS are not free and even very expensive, but Speare code editor is free! Of course, you can kindly purchase the pro version to donate some money to the author, but that is not mandatory.</li>
-<li><lt>Freedom.</lt> Feels light, simple and free. High performance code editor, flexibility to extend it to support special developing requirements and easily add a new programming language, most of these IDE on macOS can't give you such ability and freedom, can't give you smoothly coding experience when mixing multiple programming languages for big software projects. But Speare code editor give you very flexible control to extend it to add syntax highlighting for a special document and debugging environment for a new programming language without paying.
+<li><lt>Freedom.</lt> Feels light, simple and free. High performance code editor, flexibility to extend it to support special developing requirements and easily add a new programming language, most of these IDE on macOS can't give you such ability and freedom, can't give you smoothly coding experience when mixing multiple programming languages for big software projects. But Speare code editor give you very flexible control to extend it to add syntax highlighting for a special document and debugging environment for a new programming language.
 </li>
 </ol></p>
 
+<div style="display:none;">
 <h2>About Apple App Store</h2>
 <p><span class="warning">Eat food by your own hand but not the feeds they provides to your front.</span><br>
 1. Speare don't like some app (such as XXEdit) thickly marked as "Top Free Apps" and "Editor's Choice" but has hidden purchases in it, Speare has not any hidden purchases to trap people's money.<br>
 2. Speare don't like some app (such as XXRunner) thickly marked as "Top Paid Apps" but it's not up to that rank.
 </p>
+</div>
 
 <h2>Code browser, call routines tracing and code analysis</h2>
 <p>Speare code editor helps end user to understand an existing code base by powerful code browser and call routines tracing functions. Speare code editor parses source code files and maintains the database of symbol definitions instantly while user editing, and presents useful contextual information to user automatically. It also use persistent bookmarks to remember key locations within functions or classes and their references. End user can quickly navigate function calls and callers and find references to variable, function or class instantly.</p>
-
 
 <h2>Productive helps to fast find editing points</h2>
 <p>
@@ -221,7 +217,6 @@ number: #abb2bf<br>
 <span>Please create the directory if it does not exists.</span><br><br>
 </p>
 
-
 <h2>Code Formatter/Code Beautifier</h2>
 <p><b>Supported languages</b>:<br>
 a. C, C++, Objective‑C, C#, Java (built-in support).<br>
@@ -239,18 +234,15 @@ b. Ruby, Lua, Python, Perl, PHP, Tcl, Swift, JavaScript, Shell scripts, Dart, Go
 <lt>tcl.sh:</lt> check Tcl installed and can be accessed from command line.<br>
 <lt>dart.sh:</lt> check Dart and dartfmt installed and can be accessed from command line.<br><br>
 
-
 <b><i>Note: </i></b><br>
 a. Python code formatter alternative:  <a href="https://github.com/psf/black" target="_blank"> https://github.com/psf/black</a><br>
 b. JavaScript and TypeScript code formatter alternative: <a href="https://github.com/prettier/prettier" target="_blank"> https://github.com/prettier/prettier</a>, it also can format CSS, SCSS, Markdown, HTML, JSON, YAML, JSX, Flow, Less, Angular, Vue, and GraphQL. <br>
 c. <i>The selected code block is complete or has logical begin and end border then the formatter can generate better output.</i>
 </p>
 
-
 <h2>Integrated development environment</h2>
 <p>Speare code editor can easily integrate building tools, code analysis tools and continue deploy tools. You can run different tasks in Speare code editor instantly, such as automatic compile (run makefile, CMake, Ant tasks etc), building and packing, or run static code analysis tools (source code analyzer, such as PC-Lint, clang-analyzer, PHPLint, OCLint, SwiftLint, and PMD etc), unit testing tools, memory leak detection tools such as Valgrind, performance analysis tools, code style check tools, and any other tasks. Speare code editor provides you complete freedom to extend the editor to satisfy special requirements of your development environment. 
 </p>
-
 
 <h2>Programming Languages and Document Types</h2>
 <p>The built-in parsers of Speare code editor can parse tons of common document formats and programming languages.<br><br>
